--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "\"Browser based game\"",
   "main": "index.js",
   "scripts": {
-    "build": "babel src -d dist"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    
+    "build": "babel src -d dist",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -22,7 +25,10 @@
   "devDependencies": {
     "@babel/cli": "^7.26.4",
     "@babel/core": "^7.26.9",
-    "@babel/preset-env": "^7.26.9"
+    "@babel/preset-env": "^7.26.9",
+    "@eslint/js": "^9.20.0",
+    "eslint": "^8.57.1",
+    "globals": "^15.15.0"
   },
   "dependencies": {
     "core-js": "^3.40.0"
